--- a/releases/gcc-arm-none-eabi-10.3-2021.10/Dockerfile
+++ b/releases/gcc-arm-none-eabi-10.3-2021.10/Dockerfile
@@ -46,3 +46,6 @@ RUN tar xj -C /usr --strip 1 -f /tmp/gcc-arm-none-eabi-10.3-2021.10-aarch64-linu
 
 # Select the proper arch for the rest of this.
 FROM dev-base-${TARGETOS}_${TARGETARCH}
+
+# Allow gdb to source .gdbinit file from /mnt/bind-root.
+RUN echo "add-auto-load-safe-path /mnt/bind-root/.gdbinit" >> /root/.gdbinit
