--- a/releases/gcc-arm-none-eabi-9-2020-q2-update/Dockerfile
+++ b/releases/gcc-arm-none-eabi-9-2020-q2-update/Dockerfile
@@ -19,7 +19,8 @@ RUN apt-get update -y                                   \
     make                                                \
     man                                                 \
     manpages                                            \
-    manpages-dev
+    manpages-dev                                        \
+    python3
 
 # Create the bind-mount directory.
 RUN mkdir -p /mnt/bind-root
