Dockerfile: Use Ubuntu 22.04 as the base image; add missing bzip2 library.
We update to Ubuntu 22.04 to get a newer version of gdb-multiarch (from
version 9 before to version 12 now).  This newer version supports
backtraces and debugging across interrupt handlers such as hard faults
and mem manage faults.  The older version of gdb wouldn't be able to
decode the stack past the interrupt entry, making it really hard to
figure out what line of code may have been doing an access violation.

Ubuntu 22.04 doesn't seem to have bzip2 by default which is needed for
decompressing some of the archives, so we also add it here.

--- a/releases/gcc-arm-none-eabi-9-2020-q2-update/Dockerfile
+++ b/releases/gcc-arm-none-eabi-9-2020-q2-update/Dockerfile
@@ -1,7 +1,7 @@
 # Copyright (c) 2022 by Terry Greeniaus.
 # Build with: docker build -t gcc-arm-none-eabi-9.3.1 .
 # Run with: docker run -ti --rm --mount type=bind,source="$(pwd)",target=/mnt/bind-root gcc-arm-none-eabi-9.3.1 <cmd goes here>
-FROM ubuntu:20.04 AS dev-base
+FROM ubuntu:22.04 AS dev-base
 
 # Set the locale.
 ENV LANG C.UTF-8
@@ -12,6 +12,7 @@ RUN yes | unminimize
 # Install the standard tools we would like to export.
 RUN apt-get update -y                                   \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y   \
+    bzip2                                               \
     g++                                                 \
     gcc                                                 \
     gdb-multiarch                                       \
